# tec_code

./: .gitignore  README.md  pyproject.toml  requirements.txt
ML_api/: pyproject.toml
api/: ml_api.py
models/: model.sav
tec_code/: pyproject.toml
test/: unit_test.py  unit_test_model.py
train/: config.py  train_model.py  use_model.py
